--- a/codeplayer.html
+++ b/codeplayer.html
@@ -142,7 +142,9 @@
         <h3 class="sample-code-btn">HTML Sample Code</h3>
       </div> -->
       <textarea placeholder="dfdf"style="border-left:none;">
-        <h1>Sample Code</h1>
+        <h1>Welcome to CodePlayer V1.0</h1>
+        <p>I hope you enjoy it and if you have feedback feel free to shoot me an email</p>
+        <p id="author">Created By: Eric Orellana</p>
       </textarea>
     </div>
     <div id="css-panel">
@@ -154,7 +156,12 @@
       </div> -->
       <textarea>
         h1 {
-          color: red;
+          font-family: "Helvetica";
+        }
+
+        #author {
+          font-weight: bold;
+          color: blue;
         }
       </textarea>
     </div>
@@ -166,7 +173,7 @@
         <h3 class="sample-code-btn">JS Sample Code</h3>
       </div> -->
       <textarea>
-        alert("sample code");
+        alert("Welcome to CodePlayer V1.0");
       </textarea>
     </div>
     <div id="result-panel">
