--- a/codeplayer.html
+++ b/codeplayer.html
@@ -20,7 +20,8 @@
 
     #codeplayer-topnav{
       border-bottom: 1px solid grey;
-      background-color: #e0e0e0;
+      /*background-color: #e0e0e0;*/
+      background-color: #ED1C24;
       width:100%;
       height: 40px;
     }
@@ -30,7 +31,7 @@
       margin-left: 25px;
       font-weight: bold;
       /*color: #0099CC;*/
-      color: black;
+      color: #FFFFFF;
       font-size: 130%;
       padding: 5px;
     }
@@ -48,9 +49,10 @@
     #programming-languages-tabs li {
       display: table-cell;
       float: left;
-      border: 1px solid grey;
+      border: 1px solid #FFFFFF;
       padding: 5px 7px;
       border-radius: 2px;
+      color: #FFFFFF;
     }
 
     #run-bttn-div{
@@ -65,7 +67,6 @@
 
     #resultsdiv,
     #panels-container textarea{
-      /*what exactly is border-box, because this fixed my text-area to not flow passed the right border line*/
       box-sizing: border-box;
       border: 1px solid black;
       border-bottom: none;
@@ -92,7 +93,8 @@
       /*height: auto;*/
       overflow: auto;
       text-align: center;
-      background-color: grey;
+      background-color: black;
+      /*background-color: #831618;*/
     }
 
     .panelHeader > h3 {
@@ -101,19 +103,6 @@
       margin-bottom: 0px;
       color: white;
     }
-
-   /* .sample-container {
-      text-align: center;
-      cursor: pointer;
-      border-right: 1px solid black;
-      border-top: 1px solid black;
-    }
-
-    .sample-container > h3 {
-      margin-bottom: 0px;
-      margin-top: 0px;
-      padding: 5px;
-    }*/
 
 </style>
 
@@ -223,13 +212,13 @@
         if (togglesDisplayedArray.length > 0){
           setWidth(togglesDisplayedArray, width);
         }
-        $(this).css("background-color", "#0099CC");
+        $(this).css("background-color", "black");
         selectedPanel.show();
       }else{
         width = 100/(panelsDisplayed - 2);
         setWidth(togglesDisplayedArray, width);
         selectedPanel.hide();
-        $(this).css("background-color","#e0e0e0");
+        $(this).css("background-color","#ED1C24");
       }
     });
   });
